Authentication done without routing

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -63,6 +63,14 @@ body{
     background-color: whitesmoke
 }
 
+.margin-login{
+    margin-top: 4rem;
+}
+
+.btn-login{
+    margin-top: 1rem;
+}
+
 @media (max-width: 768px) {
     .sidebar {
         margin-left: -250px;
