--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -79,7 +79,29 @@
     padding: 3rem;
 }
 
+.login-card{
+    padding: 3rem;
+    margin: 0;
+}
 
+.login-content{
+    padding: 3rem;
+}
+
+body{
+    background-color: whitesmoke;
+}
+
+.dashboard-card{
+    margin-bottom: 3rem;
+}
+
+.home-container{
+    margin-top: 3rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+    margin-bottom: 3rem;
+}
 
 @media (max-width: 768px) {
     .sidebar {
